# buildahscript-py

./: .cirrus.yml  .gitignore  LICENSE  README.md  licensezero.json  pyproject.toml
.ci/: Dockerfile  test.py  test.xsh
buildahscript/: _resolver.py  cli.py  metadata.py  modglobals.py  parser.py  runner.py  venv.py
demos/: add  args  copy  deps  hello-world  inspect  mount  run
