[tool.poetry]
name = "buildahscript"
version = "0.1.0"
description = "Tool for buildah scripts"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
buildahscript-py = 'buildahscript.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
