[tool.poetry]
name = "buildahscript"
version = "0.2.0"
description = "Tool for buildah scripts"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "prosperity"
readme = "README.md"
homepage = "https://buildahscript.github.io/"
repository = "https://github.com/buildahscript/buildahscript-py"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
buildahscript-py = 'buildahscript.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
